chore: Gif animation support